# cxx_qt_test

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
cpp/: main.cpp
qml/: main.qml
rust/: Cargo.toml  build.rs
rust/src/: cxxqt_object.rs
src/: main.rs
